added author anthropology

--- a/DataGathering/CleaningRedditData.ipynb
+++ b/DataGathering/CleaningRedditData.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -663,6 +663,420 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wsb = pd.read_pickle(\"../Data/wsb_cleaned.pkl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wsb.to_csv(\"wsb_cleaned.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(\"wsb_cleaned.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>title</th>\n",
+       "      <th>author</th>\n",
+       "      <th>created_datetime_utc</th>\n",
+       "      <th>selftext</th>\n",
+       "      <th>url</th>\n",
+       "      <th>upvote_ratio</th>\n",
+       "      <th>ups</th>\n",
+       "      <th>total_awards_received</th>\n",
+       "      <th>num_comments</th>\n",
+       "      <th>num_crossposts</th>\n",
+       "      <th>is_self</th>\n",
+       "      <th>is_video</th>\n",
+       "      <th>media_only</th>\n",
+       "      <th>id</th>\n",
+       "      <th>created_utc</th>\n",
+       "      <th>selftext_html</th>\n",
+       "      <th>author_fullname</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Nio day🚀🚀</td>\n",
+       "      <td>Evdrmr</td>\n",
+       "      <td>2021-01-01 23:55:39</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>https://i.redd.it/ytvyk6p47t861.jpg</td>\n",
+       "      <td>0.70</td>\n",
+       "      <td>11</td>\n",
+       "      <td>0</td>\n",
+       "      <td>15</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>kom7tp</td>\n",
+       "      <td>1.609545e+09</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>t2_5o7wfxis</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Stop making “meta” posts about awards. You ain...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2021-01-01 23:51:49</td>\n",
+       "      <td>[removed]\\n</td>\n",
+       "      <td>https://www.reddit.com/r/wallstreetbets/commen...</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>kom59t</td>\n",
+       "      <td>1.609545e+09</td>\n",
+       "      <td>&lt;!-- SC_OFF --&gt;&lt;div class=\"md\"&gt;&lt;p&gt;[removed]&lt;/p...</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Did I do something wrong (r/stocks)</td>\n",
+       "      <td>nathantheman</td>\n",
+       "      <td>2021-01-01 23:49:52</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>https://i.redd.it/if5ewo146t861.jpg</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>kom3zp</td>\n",
+       "      <td>1.609545e+09</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>t2_dwidc</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Fuck r/stocks all my homies hate r/stocks</td>\n",
+       "      <td>Danne080</td>\n",
+       "      <td>2021-01-01 23:49:26</td>\n",
+       "      <td>[removed]\\n</td>\n",
+       "      <td>https://www.reddit.com/r/wallstreetbets/commen...</td>\n",
+       "      <td>0.71</td>\n",
+       "      <td>12</td>\n",
+       "      <td>0</td>\n",
+       "      <td>15</td>\n",
+       "      <td>0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>kom3oq</td>\n",
+       "      <td>1.609545e+09</td>\n",
+       "      <td>&lt;!-- SC_OFF --&gt;&lt;div class=\"md\"&gt;&lt;p&gt;[removed]&lt;/p...</td>\n",
+       "      <td>t2_cyikut2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>$ACAM 🚀🚀🚀🚀 Go big or go home - I’ll be posting...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2021-01-01 23:46:49</td>\n",
+       "      <td>[deleted]\\n</td>\n",
+       "      <td>https://i.redd.it/bigbcmck5t861.jpg</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>kom1z8</td>\n",
+       "      <td>1.609545e+09</td>\n",
+       "      <td>&lt;!-- SC_OFF --&gt;&lt;div class=\"md\"&gt;&lt;p&gt;[deleted]&lt;/p...</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>960960</th>\n",
+       "      <td>960960</td>\n",
+       "      <td>ASO technical breakout and DD</td>\n",
+       "      <td>rldkyce</td>\n",
+       "      <td>2021-05-06 00:02:57</td>\n",
+       "      <td>good evening apes, fellow smooth brains\\nfirst...</td>\n",
+       "      <td>https://www.reddit.com/r/wallstreetbets/commen...</td>\n",
+       "      <td>0.78</td>\n",
+       "      <td>44</td>\n",
+       "      <td>10</td>\n",
+       "      <td>54</td>\n",
+       "      <td>0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>n5udz9</td>\n",
+       "      <td>1.620259e+09</td>\n",
+       "      <td>&lt;!-- SC_OFF --&gt;&lt;div class=\"md\"&gt;&lt;p&gt;good evening...</td>\n",
+       "      <td>t2_4p2nwfnu</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>960961</th>\n",
+       "      <td>960961</td>\n",
+       "      <td>First YOLO on CRSR</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2021-05-06 00:02:55</td>\n",
+       "      <td>[deleted]\\n</td>\n",
+       "      <td>https://i.redd.it/l0729o9g5ex61.png</td>\n",
+       "      <td>0.57</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>n5udy3</td>\n",
+       "      <td>1.620259e+09</td>\n",
+       "      <td>&lt;!-- SC_OFF --&gt;&lt;div class=\"md\"&gt;&lt;p&gt;[deleted]&lt;/p...</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>960962</th>\n",
+       "      <td>960962</td>\n",
+       "      <td>Rkt to the moon!</td>\n",
+       "      <td>Disastrous-Egg9959</td>\n",
+       "      <td>2021-05-06 00:02:43</td>\n",
+       "      <td>[removed]\\n</td>\n",
+       "      <td>https://www.reddit.com/r/wallstreetbets/commen...</td>\n",
+       "      <td>0.48</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>11</td>\n",
+       "      <td>0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>n5udsv</td>\n",
+       "      <td>1.620259e+09</td>\n",
+       "      <td>&lt;!-- SC_OFF --&gt;&lt;div class=\"md\"&gt;&lt;p&gt;[removed]&lt;/p...</td>\n",
+       "      <td>t2_7hzx72of</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>960963</th>\n",
+       "      <td>960963</td>\n",
+       "      <td>My therapist told me I’m delusional for thinki...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2021-05-06 00:02:38</td>\n",
+       "      <td>[deleted]\\n</td>\n",
+       "      <td>https://i.redd.it/f2up498f5ex61.jpg</td>\n",
+       "      <td>0.33</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>n5udq9</td>\n",
+       "      <td>1.620259e+09</td>\n",
+       "      <td>&lt;!-- SC_OFF --&gt;&lt;div class=\"md\"&gt;&lt;p&gt;[deleted]&lt;/p...</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>960964</th>\n",
+       "      <td>960964</td>\n",
+       "      <td>$CCIV - Lucid motors testing their FSD in Frem...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2021-05-06 00:00:46</td>\n",
+       "      <td>[deleted]\\n</td>\n",
+       "      <td>https://www.reddit.com/gallery/n5ucbx</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>n5ucbx</td>\n",
+       "      <td>1.620259e+09</td>\n",
+       "      <td>&lt;!-- SC_OFF --&gt;&lt;div class=\"md\"&gt;&lt;p&gt;[deleted]&lt;/p...</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>960965 rows × 18 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Unnamed: 0                                              title  \\\n",
+       "0                0                                          Nio day🚀🚀   \n",
+       "1                1  Stop making “meta” posts about awards. You ain...   \n",
+       "2                2                Did I do something wrong (r/stocks)   \n",
+       "3                3          Fuck r/stocks all my homies hate r/stocks   \n",
+       "4                4  $ACAM 🚀🚀🚀🚀 Go big or go home - I’ll be posting...   \n",
+       "...            ...                                                ...   \n",
+       "960960      960960                      ASO technical breakout and DD   \n",
+       "960961      960961                                 First YOLO on CRSR   \n",
+       "960962      960962                                   Rkt to the moon!   \n",
+       "960963      960963  My therapist told me I’m delusional for thinki...   \n",
+       "960964      960964  $CCIV - Lucid motors testing their FSD in Frem...   \n",
+       "\n",
+       "                    author created_datetime_utc  \\\n",
+       "0                   Evdrmr  2021-01-01 23:55:39   \n",
+       "1                     None  2021-01-01 23:51:49   \n",
+       "2             nathantheman  2021-01-01 23:49:52   \n",
+       "3                 Danne080  2021-01-01 23:49:26   \n",
+       "4                     None  2021-01-01 23:46:49   \n",
+       "...                    ...                  ...   \n",
+       "960960             rldkyce  2021-05-06 00:02:57   \n",
+       "960961                None  2021-05-06 00:02:55   \n",
+       "960962  Disastrous-Egg9959  2021-05-06 00:02:43   \n",
+       "960963                None  2021-05-06 00:02:38   \n",
+       "960964                None  2021-05-06 00:00:46   \n",
+       "\n",
+       "                                                 selftext  \\\n",
+       "0                                                     NaN   \n",
+       "1                                             [removed]\\n   \n",
+       "2                                                     NaN   \n",
+       "3                                             [removed]\\n   \n",
+       "4                                             [deleted]\\n   \n",
+       "...                                                   ...   \n",
+       "960960  good evening apes, fellow smooth brains\\nfirst...   \n",
+       "960961                                        [deleted]\\n   \n",
+       "960962                                        [removed]\\n   \n",
+       "960963                                        [deleted]\\n   \n",
+       "960964                                        [deleted]\\n   \n",
+       "\n",
+       "                                                      url  upvote_ratio  ups  \\\n",
+       "0                     https://i.redd.it/ytvyk6p47t861.jpg          0.70   11   \n",
+       "1       https://www.reddit.com/r/wallstreetbets/commen...          1.00    1   \n",
+       "2                     https://i.redd.it/if5ewo146t861.jpg          1.00    1   \n",
+       "3       https://www.reddit.com/r/wallstreetbets/commen...          0.71   12   \n",
+       "4                     https://i.redd.it/bigbcmck5t861.jpg          1.00    1   \n",
+       "...                                                   ...           ...  ...   \n",
+       "960960  https://www.reddit.com/r/wallstreetbets/commen...          0.78   44   \n",
+       "960961                https://i.redd.it/l0729o9g5ex61.png          0.57    2   \n",
+       "960962  https://www.reddit.com/r/wallstreetbets/commen...          0.48    0   \n",
+       "960963                https://i.redd.it/f2up498f5ex61.jpg          0.33    0   \n",
+       "960964              https://www.reddit.com/gallery/n5ucbx          1.00    1   \n",
+       "\n",
+       "        total_awards_received  num_comments  num_crossposts  is_self  \\\n",
+       "0                           0            15               0    False   \n",
+       "1                           0             0               0     True   \n",
+       "2                           0             0               0    False   \n",
+       "3                           0            15               0     True   \n",
+       "4                           0             0               0    False   \n",
+       "...                       ...           ...             ...      ...   \n",
+       "960960                     10            54               0     True   \n",
+       "960961                      0             1               0    False   \n",
+       "960962                      0            11               0     True   \n",
+       "960963                      0             1               0    False   \n",
+       "960964                      0             1               0    False   \n",
+       "\n",
+       "        is_video  media_only      id   created_utc  \\\n",
+       "0          False       False  kom7tp  1.609545e+09   \n",
+       "1          False       False  kom59t  1.609545e+09   \n",
+       "2          False       False  kom3zp  1.609545e+09   \n",
+       "3          False       False  kom3oq  1.609545e+09   \n",
+       "4          False       False  kom1z8  1.609545e+09   \n",
+       "...          ...         ...     ...           ...   \n",
+       "960960     False       False  n5udz9  1.620259e+09   \n",
+       "960961     False       False  n5udy3  1.620259e+09   \n",
+       "960962     False       False  n5udsv  1.620259e+09   \n",
+       "960963     False       False  n5udq9  1.620259e+09   \n",
+       "960964     False       False  n5ucbx  1.620259e+09   \n",
+       "\n",
+       "                                            selftext_html author_fullname  \n",
+       "0                                                     NaN     t2_5o7wfxis  \n",
+       "1       <!-- SC_OFF --><div class=\"md\"><p>[removed]</p...             NaN  \n",
+       "2                                                     NaN        t2_dwidc  \n",
+       "3       <!-- SC_OFF --><div class=\"md\"><p>[removed]</p...      t2_cyikut2  \n",
+       "4       <!-- SC_OFF --><div class=\"md\"><p>[deleted]</p...             NaN  \n",
+       "...                                                   ...             ...  \n",
+       "960960  <!-- SC_OFF --><div class=\"md\"><p>good evening...     t2_4p2nwfnu  \n",
+       "960961  <!-- SC_OFF --><div class=\"md\"><p>[deleted]</p...             NaN  \n",
+       "960962  <!-- SC_OFF --><div class=\"md\"><p>[removed]</p...     t2_7hzx72of  \n",
+       "960963  <!-- SC_OFF --><div class=\"md\"><p>[deleted]</p...             NaN  \n",
+       "960964  <!-- SC_OFF --><div class=\"md\"><p>[deleted]</p...             NaN  \n",
+       "\n",
+       "[960965 rows x 18 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
   },
   {
    "cell_type": "code",
