--- a/ExploratoryDataAnalysis/Pairplots.ipynb
+++ b/ExploratoryDataAnalysis/Pairplots.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "fbb2fb8c",
+   "execution_count": 2,
+   "id": "12572d20",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,8 +12,36 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "41fa3d67",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "08d753dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'pd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-110bdd7699e2>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mwsb\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread_pickle\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'../Data/wsb_cleaned.pkl'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'pd' is not defined"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
-   "id": "a2844160",
+   "id": "0ab3b425",
    "metadata": {},
    "source": [
     "## Are there any simple relations between the variables?"
@@ -22,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "58899bfa",
+   "id": "2a813974",
    "metadata": {},
    "outputs": [
     {
@@ -46,16 +74,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "65bbb161",
+   "execution_count": 1,
+   "id": "dede1b5b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'pd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-8682f0f830e8>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mhelp\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpd\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'pd' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "help(pd)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "afbb14f9",
+   "id": "e12e5724",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -63,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "9ed2b068",
+   "id": "efb6476c",
    "metadata": {},
    "outputs": [
     {
@@ -95,14 +137,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b46fe7ee",
+   "id": "e046cbba",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "7df1dcdd",
+   "id": "97b3987c",
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4eaf57f6",
+   "id": "95405fe5",
    "metadata": {},
    "outputs": [],
    "source": []
